--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,15 @@
 body {
-    background-color: antiquewhite;
+    background-color: ghostwhite;
+}
+
+h4 {
+    text-decoration: underline;
+}
+
+.prep-table {
+    background-color: burlywood;
+}
+
+.sandwich-table {
+    background-color: white;
 }
